Set up application views

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,18 @@
-<h1 class="title">Jerry's Index</h1>
+<%= content_for :page_title, "Index" %>
+
+<div class="section">
+  <div class="container">
+    <%= @posts.each do |post| %>
+      <div class="card">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title"> <%= link_to post.title, post %> </p>
+          </div>
+        </div>
+        <div class="content">
+          <%= post.content%>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
