--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,35 @@
   </head>
 
   <body>
+    <section>
+    <div class="hero-head">
+      <div class="navbar">
+        <div class="container">
+          <div class="navbar-brand">
+            <%= link_to 'Demo Blog', root_path, class: "navbar-item" %>
+            <span class="navbar-burger burger" data-target="navbarMenuHeroA" >
+              <span></span>
+              <span></span>
+              <span></span>
+            </span>
+          </div>
+          <div id="navbarMenuHeroA" class="navbar-navbar-menu">
+            <div class="navbar-end">
+              <%= link_to "Create New Post", new_post_path, class:"navbar-item" %>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title">
+          <%= yield :page_title %>
+        </h1>
+      </div>
+    </div>
+    </section>
     <%= yield %>
   </body>
 </html>
