Implement bulma css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <section>
+    <section class="hero is-primary is-medium" >
     <div class="hero-head">
       <div class="navbar">
         <div class="container">
@@ -22,7 +22,7 @@
               <span></span>
             </span>
           </div>
-          <div id="navbarMenuHeroA" class="navbar-navbar-menu">
+          <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
               <%= link_to "Create New Post", new_post_path, class:"navbar-item" %>
             </div>
