Add delete method

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,9 +12,9 @@
             <p class="level-item">
               <%= link_to "Edit", edit_post_path(@post), class: 'button' %>
             </p>
-            <p class="level-item">
-              <a class="button is-danger">Delete</a>
-            </p>
+             <p class="level-item">
+                    <%= button_to "Delete", post_path(@post), form: { data: { turbo_confirm: "are you sure?" } }, method: :delete, class: "button is-danger" %>
+                </p>
           </div> 
         </nav>
         <hr />
