--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="section">
   <div class="container">
-    <%= @posts.each do |post| %>
+    <% @posts.each do |post| %>
       <div class="card">
         <div class="card-content">
           <div class="media-content">
